# nd-rotary-encodings

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: functional.md  index.md  layer.md
nd_rotary_encodings/: __init__.py
nd_rotary_encodings/functional/: __init__.py  autograd.py  forward_backward_fns.py  forward_only.py  utils.py
nd_rotary_encodings/position_encoding_layer/: __init__.py  freq_init.py  rope_encoding_layer.py  utils.py
notebooks/: basic_usage.ipynb  benchmark.ipynb
tests/: __init__.py  test_init_and_helpers.py  test_misc.py  test_rope_encoding_nd.py
tests/forward_backward_fns/: test_calculate_rope.py  test_integration.py  test_properties.py  test_rotate_embeddings.py
tests/functional/: test_calculate_rope.py  test_integration.py  test_properties.py  test_rotate_embeddings.py  test_wrappers.py
tests/rope_encoding_layer/: conftest.py  test_backward_freqgroups_helpers.py  test_init_and_forward.py
