[project]
name = "nd-rotary-encodings"
description = "N-Dimensional Rotary Positional Encodings (RoPE) in PyTorch"
authors = [
    {name = "Matthew A. Wright", email = "mawright@lbl.gov"}
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "torch",
]

[tool.setuptools]
packages = ["nd_rotary_encodings"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-env",
    "pytest-cov",
    "pytest-xdist",
    "hypothesis",
]
docs = ["mkdocs", "mkdocstrings", "mkdocstrings-python"]

[tool.pytest.ini_options]
env = [
    "CUDA_LAUNCH_BLOCKING=1",  # Makes debugging easier
]
markers = [
    "cuda_if_available: mark test to run on CUDA when available, otherwise fall back to CPU",
    "cpu_and_cuda: mark test to run on both cpu as well as CUDA if available"
]
filterwarnings = [
    "ignore:.*custom_[fb]wd.*:FutureWarning:spconv.pytorch.functional",  # spconv import
    "ignore:.*Importing from timm\\.models\\.layers.*:FutureWarning:timm.models.layers", 
    "ignore:.*locale.getdefaultlocale.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["nd_rotary_encodings"]
parallel = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if torch\\.jit\\.is_scripting\\(\\):",
]